[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "task-cli"
authors = [
    {name = "Moralis", email = "moralis-coder@pm.me"},
]
description = "A CLI app to track your tasks and manage your to-do list"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["task manager", "cli"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []
dynamic = ["version"]

[project.scripts]
task-cli = "task_cli.__main__:cli"
